@@ -1,26 +1,29 @@
 package com.iconiux.ezrfs.daemon.service;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.cache.LoadingCache;
 import com.iconiux.ezlfs.model.FileMetadata;
 import com.iconiux.ezlfs.service.IFileStorage;
-import com.iconiux.ezlfs.util.EzHashUtils;
+import io.github.thibaultmeyer.cuid.CUID;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FilenameUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.UrlResource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.servlet.ModelAndView;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.concurrent.locks.ReentrantLock;
 
@@ -33,7 +36,12 @@ public class TFileService {
 	@Autowired
 	private IFileStorage storageService;
 	@Autowired
-	private LoadingCache<String, ReentrantLock> fileHashCache;
+	private LoadingCache<String, ReentrantLock> fileCuidCache;
+	@Autowired
+	private ObjectMapper objectMapper;
+
+	@Value("${ezrfs.api.url}")
+	private String baseUrl;
 
 	/**
 	 * @param file .
@@ -42,13 +50,14 @@ public class TFileService {
 	public ResponseEntity<String> uploadFile(MultipartFile file) {
 		String fileName = file.getName();
 		try {
-			String hash = EzHashUtils.ezHash(file.getBytes());
+			String fileCuid = CUID.randomCUID2(36).toString();
 
-			ReentrantLock lock = fileHashCache.getUnchecked(hash);
+			ReentrantLock lock = fileCuidCache.getUnchecked(fileCuid);
 			lock.lock();
 			try {
 				FileMetadata fileMetadata = new FileMetadata();
-				fileMetadata.setFileHash(hash);
+				fileMetadata.setFileCuid(fileCuid);
+//				fileMetadata.setFileHash(hash);
 				fileMetadata.setOriginalFileName(file.getOriginalFilename());
 				fileMetadata.setFileName(fileName);
 				fileMetadata.setFileContentType(file.getContentType());
@@ -56,9 +65,9 @@ public class TFileService {
 				fileMetadata.setFileExt(FilenameUtils.getExtension(file.getOriginalFilename()));
 				String fileHash = storageService.saveFile(fileMetadata, file.getBytes());
 				String fileDownloadUri = ServletUriComponentsBuilder.fromCurrentContextPath()
-						.path("/api/v1/download/")
-						.path(fileHash)
-						.toUriString();
+					.path("/api/v1/view/")
+					.path(fileCuid)
+					.toUriString();
 
 				log.info("Successfully uploaded file: {}", fileDownloadUri);
 				return ResponseEntity.ok(fileDownloadUri);
@@ -72,19 +81,19 @@ public class TFileService {
 	}
 
 	/**
-	 * @param fileHash .
+	 * @param fileCuid .
 	 * @param request  .
 	 * @return .
 	 */
-	public ResponseEntity<org.springframework.core.io.Resource> downloadFile(String fileHash, HttpServletRequest request) {
+	public ResponseEntity<org.springframework.core.io.Resource> downloadFile(String fileCuid, HttpServletRequest request) {
 		try {
-			Path filePath = storageService.getFilePath(fileHash);
+			Path filePath = storageService.getFilePath(fileCuid);
 			if (!filePath.toFile().exists()) {
 				throw new FileNotFoundException();
 			}
 
 			org.springframework.core.io.Resource resource = new UrlResource(filePath.toUri());
-			FileMetadata fileMetadata = storageService.getFileMetadata(fileHash);
+			FileMetadata fileMetadata = storageService.getFileMetadata(fileCuid);
 
 			if (resource.exists() && resource.isReadable() && fileMetadata != null) {
 //				String contentType = request.getServletContext().getMimeType(resource.getFile().getAbsolutePath());
@@ -96,11 +105,7 @@ public class TFileService {
 					log.info("Downloading file: {}, Content-Type: {}", fileMetadata.getOriginalFileName(), contentType);
 
 					String fileName = null;
-					try {
-						fileName = URLEncoder.encode(fileMetadata.getOriginalFileName(), "UTF-8").replaceAll("\\+", "%20");
-					} catch (UnsupportedEncodingException e) {
-						log.error("{}", e.getMessage(), e);
-					}
+					fileName = URLEncoder.encode(fileMetadata.getOriginalFileName(), StandardCharsets.UTF_8).replaceAll("\\+", "%20");
 					return ResponseEntity.ok()
 						.contentType(MediaType.parseMediaType(contentType))
 //						.header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + fileMetadata.getOriginalFileName().replace(" ", "_") + "\"")
@@ -115,15 +120,92 @@ public class TFileService {
 				}
 
 			} else {
-				log.warn("File not found for download: {}", fileHash);
+				log.warn("File not found for download: {}", fileCuid);
 				return ResponseEntity.notFound().build();
 			}
 		} catch (MalformedURLException ex) {
-			log.error("Malformed URL for file: {}", fileHash, ex);
+			log.error("Malformed URL for file: {}", fileCuid, ex);
 			return ResponseEntity.badRequest().build();
 		} catch (IOException ex) {
-			log.error("Could not determine file type for file: {}", fileHash, ex);
+			log.error("Could not determine file type for file: {}", fileCuid, ex);
 			return ResponseEntity.internalServerError().build();
 		}
+	}
+
+	/**
+	 * @return .
+	 */
+	public ResponseEntity<Boolean> checkAlive() {
+		return ResponseEntity.ok()
+//			.contentType(MediaType.TEXT_PLAIN)
+			.body(true);
+	}
+
+	/**
+	 * @param fileCuid .
+	 * @return .
+	 */
+	public ResponseEntity<FileMetadata> getFileMeta(String fileCuid) {
+		try {
+			Path filePath = storageService.getFilePath(fileCuid);
+			if (!filePath.toFile().exists()) {
+				return ResponseEntity.notFound().build();
+			}
+
+			org.springframework.core.io.Resource resource = new UrlResource(filePath.toUri());
+			FileMetadata fileMetadata = storageService.getFileMetadata(fileCuid);
+
+			if (resource.exists() && resource.isReadable() && fileMetadata != null) {
+				return ResponseEntity.ok()
+//					.contentType(MediaType.APPLICATION_JSON)
+					.body(fileMetadata);
+			} else {
+				return ResponseEntity.notFound().build();
+			}
+		} catch (MalformedURLException ex) {
+			log.error("Malformed URL for file: {}", fileCuid, ex);
+			return ResponseEntity.badRequest().build();
+		} catch (IOException ex) {
+			log.error("Could not determine file type for file: {}", fileCuid, ex);
+			return ResponseEntity.internalServerError().build();
+		}
+	}
+
+	/**
+	 * @param model    .
+	 * @param fileCuid .
+	 * @return .
+	 */
+	public ModelAndView addInfo(ModelAndView model, String fileCuid) {
+		try {
+			model.addObject("fileCuid", fileCuid);
+			Path filePath = storageService.getFilePath(fileCuid);
+			if (!filePath.toFile().exists()) {
+				model.addObject("notFound", true);
+			} else {
+				org.springframework.core.io.Resource resource = new UrlResource(filePath.toUri());
+				FileMetadata fileMetadata = storageService.getFileMetadata(fileCuid);
+
+				if (resource.exists() && resource.isReadable() && fileMetadata != null) {
+					model.addObject("contentType", fileMetadata.getFileContentType());
+					model.addObject("originalFileName", fileMetadata.getOriginalFileName());
+					model.addObject("fileName", fileMetadata.getFileName());
+					model.addObject("fileExt", fileMetadata.getFileExt());
+					model.addObject("fileMimeType", fileMetadata.getFileMimeType());
+
+					model.addObject("isError", false);
+				} else {
+					model.addObject("notFound", true);
+				}
+			}
+		} catch (MalformedURLException ex) {
+			log.error("Malformed URL for file: {}", fileCuid, ex);
+			model.addObject("isError", true);
+		} catch (IOException ex) {
+			log.error("Could not determine file type for file: {}", fileCuid, ex);
+			model.addObject("isError", true);
+		}
+
+		return model;
 	}
 }
